2008-07-07  Arno Rehn  <arno@arnorehn.de>

	* Allow to call InitRuntime() multiple times to make sure every binding
	  is initialized.

2008-07-06  Richard Dale  <richard.j.dale@gmail.com>

	* Where multiple inheritance was catered for in the Qyoto bindings each
	  superclass class other than the 'main' one was supposed to be an
	  interface type in method calls rather than the real type of the class.
	  For instance, QGraphicsWidget inherits from QObject, QGraphicsItem and
	  QGraphicsLayoutItem, and the last two classes have interfaces 
	  IQGraphicsItem IQGraphicsLayoutItem respectively The two classes were
	  correctly implementing the interfaces, but the types in the method calls
	  were not using these interface types. So fix that.
	* In the generated code, tabs are now replaced with 4 spaces.

2008-07-01  Arno Rehn  <arno@arnorehn.de>

	* Moved the runtime initialization from the static SmokeInvocation
	  constructor to a new method 'InitRuntime'. This is necessary for
	  KMonoPluginFactory to work.

2008-06-30  Richard Dale  <richard.j.dale@gmail.com>

	* When a C# value was marshalled to C++, and the actual type of
	  the C++ instance was cast to the type of the return value, it
	  wasn't working correctly if the target type for the cast wasn't in
	  the same smoke module as the type of the instance. For instance,
	  an instance of type Plasma::Applet wasn't being correctly cast
	  to a QGraphicsLayoutItem, which caused a crash.
	* Fixed a similar bug to the above description, but for where the target
	  of a method call was being cast to the correct class. For instance,
	  a call of parentWidget() on a Plasma::Applet() needed the correct cast
	  to a QWidget for it to work.

2008-06-20  Richard Dale  <richard.j.dale@gmail.com>

	* Call QMetaObject.NormalizedSignature() on the Q_SLOT and Q_SIGNAL
	  strings when creating a QMetaObject with them, otherwise space and 
	  other things will be significant.

2008-06-19  Richard Dale  <richard.j.dale@gmail.com>
